[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rxon"
dynamic = ["version"]
description = "RXON (Reverse Axon) - Lightweight Inter-node Reverse Communication Protocol"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Dmitrii Gagarin", email = "madgagarin@gmail.com"},
]
license = {text = "MPL-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.11.0",
    "orjson>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/madgagarin/rxon"
Repository = "https://github.com/madgagarin/rxon"

[tool.setuptools.dynamic]
version = {attr = "rxon.constants.PROTOCOL_VERSION"}

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TID", "PLC"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["rxon"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"avtomatika".msg = "Use 'from <module> import <name>' style instead of full import."
"avtomatika_worker".msg = "Use 'from <module> import <name>' style instead of full import."
"matryoshka".msg = "Use 'from <module> import <name>' style instead of full import."

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
